Bug #35654: * remove checkbox of in help dialog of umc/app/FeedbackPage * adjust some svg graphics for improved display on mobile phones
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@55274 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/umc/app.css
+++ b/management/univention-management-console-frontend/umc/app.css
@@ -42,6 +42,14 @@
 	background-image: url(app/about.svg);
 }
 
+.umc .umcAppDialogPage-feedback .umcFeedbackHardwareStatistics {
+	display: none;
+}
+
+.umc .umcStartupDialog .umcAppDialogPage-feedback .umcFeedbackHardwareStatistics {
+	display: block;
+}
+
 @media (max-width: 549px) {
 	.umc .umcAppDialogPage .umcPageIcon {
 		left: 50px;
